# aws-cdk-with-poetry-practice

./: README.md  app.py  pyproject.toml
aws_cdk_with_poetry_practice/: aws_cdk_with_poetry_practice_stack.py
src/handlers/: hello_world.py
tests/unit/: test_aws_cdk_with_poetry_practice_stack.py
